apps/echo/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:0.9.2
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: dev
spec:
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 80
